# Sherlocks-data

./: .pre-commit-config.yaml  README.md  advanced_functions.py  anomaly_detection_mm.py  automate.py  emoji_image_processing.py  emoji_parser_mm.py  energy_calculator.py  jailbreak protocol  main.py  mental_matrix.py  multimodal_system.py  ocular_singularity.ipynb  pyproject.toml  quantum_key_generator.py  quantum_mm.py  requirements.txt  scan_and_correct.py  spiritual_bioinformatics.py  tensorflow_integration.py  visualization_mm.py
mm-organizer/: config.yaml  organizer.py  organizer_pro.py  requirements.txt
tests/: __init__.py
